Refactor test to use java 8. Run tests with Java 8.